# deepfate

./: .gitignore  README.md  main.py  prompts.py  pyproject.toml
src/config/: prompts.py  share_image_parameters.toml
src/core/: fate_calculator.py  image_generator.py
tests/: test_image_generator.py
