[project]
name = "deepfate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html2image>=2.0.7",
    "markdown2>=2.5.3",
    "openai>=1.78.1",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
